<resources>
    <string name="app_name">eDnevnik</string>
    <string name="title_subject_detail">Subject Detail</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_name">Ime</string>
    <string name="prompt_password">Lozinka</string>
    <string name="action_sign_in">Prijava</string>
    <string name="action_sign_in_short">Prijava</string>
    <string name="error_invalid_email">Neispravno ime</string>
    <string name="error_invalid_password">Neispravna lozinka</string>
    <string name="error_incorrect_password">Neispravna lozinka</string>
    <string name="error_field_required">Obavezno polje</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="preference_file_key">sharedPref</string>
    <string name="preference_token_key">jwt</string>
    <string name="title_activity_home">Student</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_student_subject_details">StudentSubjectDetailsActivity</string>


    <!-- StudentDetails labels -->
    <string name="student_name">Ime</string>
    <string name="student_last_name">Prezime</string>

    <!-- SubjectDetails labels -->
    <string name="subject_name">Naziv</string>
    <string name="subject_description">Opis</string>

    <!-- StudentSubject labels -->
    <string name="average">Prosjek</string>

    <string name="student_label">Student</string>
    <string name="subject_label">Predmet</string>
    <string name="class_label">Razred</string>
    <string name="grade_label">Ocjena</string>
    <string name="grade_type_label">Vrsta</string>
    <string name="add_grade_button">Dodaj ocjenu</string>
    <string name="add_subject_button">Dodaj predmet</string>
    <string name="add_student_button">Dodaj studenta</string>


    <string name="header_type">VRSTA</string>
    <string name="header_date">DATUM</string>
    <string name="header_grade">OCJENA</string>
    <string name="title_activity_grade_input">grade_input</string>


    <!-- sifrarnici -->
    <string-array name="grade_type_list">
        <item>Ispit</item>
        <item>Usmeni</item>
        <item>Zalaganje</item>
    </string-array>

    <string-array name="grade_list">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string name="title_activity_add_subject_to_student">AddSubjectToStudent</string>
    <string name="title_activity_add_student_to_class">AddStudentToClass</string>
</resources>
