<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".GradeInputActivity"
    tools:showIn="@layout/activity_grade_input">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_margin="10dp"
                android:textSize="@dimen/input_text_size"
                android:text="@string/student_label" />
            <TextView
                android:id="@+id/grade_input_student"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textSize="@dimen/input_text_size"
                android:textColor="@color/colorPrimaryDark"
                android:layout_margin="10dp" />
        </LinearLayout>
        <View style="@style/Divider" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_margin="10dp"
                android:textSize="@dimen/input_text_size"
                android:text="@string/subject_label" />
            <TextView
                android:id="@+id/grade_input_subject"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textSize="@dimen/input_text_size"
                android:textColor="@color/colorPrimaryDark"
                android:layout_margin="10dp" />
        </LinearLayout>
        <View style="@style/Divider" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_margin="10dp"
                android:textSize="@dimen/input_text_size"
                android:text="@string/class_label" />
            <TextView
                android:id="@+id/grade_input_class"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textSize="@dimen/input_text_size"
                android:textColor="@color/colorPrimaryDark"
                android:layout_margin="10dp" />
        </LinearLayout>
        <View style="@style/Divider" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_margin="10dp"
                android:textSize="@dimen/input_text_size"
                android:text="@string/grade_type_label" />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2">

                <Spinner
                    android:id="@+id/grade_input_type_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/grade_type_list"
                    android:textSize="@dimen/input_text_size"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="10dp"/>
            </LinearLayout>
        </LinearLayout>
        <View style="@style/Divider" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_margin="10dp"
                android:textSize="@dimen/input_text_size"
                android:text="@string/grade_label" />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2">

                <Spinner
                    android:id="@+id/grade_input_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="10dp"
                    android:textSize="@dimen/input_text_size"
                    android:textColor="@color/colorPrimaryDark"
                    android:entries="@array/grade_list"
                    android:gravity="center" />
            </LinearLayout>
        </LinearLayout>
        <View style="@style/Divider" />

        <Button
            android:id="@+id/grade_input_add_grade_button"
            android:text="@string/add_grade_button"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>